added in b-reel stuff

--- a/b-reel.html
+++ b/b-reel.html
@@ -95,21 +95,29 @@
     document.body.className += ' fade-out';
   </script>
   <div class="top__link link index--rise1">
-    <p class="fluid-type14-20 roboto--regular top__link__name center__link__name"> <a class="nolink__decoration link__name__color" href="../#page2">Back</a></p>
+    <p class="fluid-type14-20 roboto--regular top__link__name center__link__name">
+      <a class="nolink__decoration link__name__color" href="../#page2">Back</a>
+    </p>
     <div class="top__link__line__container">
       <div class="top__link__line"></div>
     </div>
   </div>
   <div class="nav">
     <div class="nav__wrapper nav--left nav--transform">
-      <p class="fluid-type14-20 roboto--regular link"> <a class="nolink__decoration" href="about.html"> About</a> </p>
+      <p class="fluid-type14-20 roboto--regular link">
+        <a class="nolink__decoration" href="about.html"> About</a>
+      </p>
     </div>
     <div class="nav__wrapper nav--transformRight nav--right">
-      <p class="fluid-type14-20 roboto--regular link"> <a class="nolink__decoration" href="mailto:hello@jacobdfrank.com?subject=Jacob, let’s talk"> Email</a> </p>
+      <p class="fluid-type14-20 roboto--regular link">
+        <a class="nolink__decoration" href="mailto:hello@jacobdfrank.com?subject=Jacob, let’s talk"> Email</a>
+      </p>
     </div>
   </div>
   <div class="bottom__link link index--rise1">
-    <p class="fluid-type14-20 roboto--regular center__link__name"> <a class="nolink__decoration link__name__color" href="../#page3">Next Project</a></p>
+    <p class="fluid-type14-20 roboto--regular center__link__name">
+      <a class="nolink__decoration link__name__color" href="../#page3">Next Project</a>
+    </p>
     <div class="bottom__link__line__container">
       <div class="bottom__link__line--case"></div>
     </div>
@@ -117,26 +125,27 @@
   <div id="fullpage" onscroll="getScrollPosition()">
     <div class="section">
       <div class="case__cover">
-        <img src="img/tawProjectCoverCropped.jpeg" class="case__cover__image">
+        <img src="img/breelProjectCoverCropped.jpeg" class="case__cover__image">
         <div class="case__cover__content">
-          <h1 class="project__cover__content__title fluid-type24-100 myriad-pro-condensed"> Thought at Work</h1>
-          <h4 class="fluid-type14-20 roboto--medium">- Front-End, Project Management</h4>
+          <h1 class="project__cover__content__title fluid-type24-100 myriad-pro-condensed"> B-Reel NY</h1>
+          <h4 class="fluid-type14-20 roboto--medium">- Creative Technologist, Summer Internship</h4>
         </div>
       </div>
       <div class="case__info">
         <div class="case__info__container">
           <div class="case__info__row">
             <div class="column col-12">
-              <h2 class="roboto--bold fluid-type14-20">The Project</h2>
+              <h2 class="roboto--bold fluid-type14-20">About</h2>
             </div>
             <div class="column col-10 case__description__hr--pushDown">
               <p class="first roboto--regular fluid-type14-20">
-                Completed the development of a design conference website. Initially a member of the development team and transitioning to leading the development and executing on the website.
+                I spent the past summer in a paid internship with B-Reel in New York City. I primarily worked with the Development Team, helping to develop and design the implementation of components for multiple client project such as AMEX and Quantcast. This was a
+                great opportunity and incredible learning experience.
               </p>
             </div>
             <div class="column col-2 case__info__hr--pushDown">
-              <p class="roboto--regular fluid-type14-20">October 2016 </p>
-              <p class="roboto--regular fluid-type14-20"><a href="http://thoughtatwork.cias.rit.edu/" target="_blank">Visit Website</a></p>
+              <p class="roboto--regular fluid-type14-20">Summer 2017 </p>
+              <p class="roboto--regular fluid-type14-20"><a href="https://www.b-reel.com/" target="_blank">Visit Website</a></p>
             </div>
             <hr class="case__hr">
           </div>
@@ -144,57 +153,29 @@
       </div>
       <div class="case__info">
         <div class="casestudy__container">
-          <div class="casestudy__row--image">
-            <img src="https://taw.imgix.net/taw2016Site/HomeImage.png?w=1&h=1" class="casestudy__image">
-          </div>
           <div class="casestudy__row--text column col-12">
-            <h2 class="roboto--bold fluid-type14-20">About</h2>
             <p class="roboto--regular fluid-type14-20">
-              I’ve been involved with the ‘Thought At Work’ design conference for nearly two years in several roles, including work on the core conference team, contacting speakers, helping create installations, and most recently, building the website. <br><br>In
-              mid-July we received the first homepage mock, followed by additional pages in the coming weeks. We used a combination of Bootstrap, our own custom CSS, PHP, JavaScript for some interactions, and JQuery for a handful of animations. I developed
-              most of the site at first. As other people came on board, I took on a additional managerial role for the entire website and became the lead for the project.
+              <i>My work at B-Reel is covered by an NDA, so I can't share visuals, code, designs or any other details publicly. Drop me an <a href="mailto:hello@jacobdfrank.com?subject=Jacob, let’s talk"> email</a> if you'd like to know more and I'll get back to you asap.</i>
             </p>
           </div>
           <div class="casestudy__row--image">
-            <img src="https://taw.imgix.net/taw2016Site/HistoryImage.png?w=1&h=1" class="casestudy__image">
-          </div>
-          <div class="casestudy__row--image">
-            <img src="https://taw.imgix.net/taw2016Site/RecapImage.png?w=1&h=1" class="casestudy__image">
+            <img src="img/breelCouch.jpeg" class="casestudy__image">
           </div>
           <div class="casestudy__row--text column col-12">
-            <h2 class="roboto--bold fluid-type14-20">Responsivity</h2>
+            <h2 class="roboto--bold fluid-type14-20">What I learned</h2>
             <p class="roboto--regular fluid-type14-20">
-              At first we were only given desktop mocks for the site. Two months later we got a mobile mock of the homepage. Without a tablet mock I translated the desktop site to tablet and mobile without compromising the original style and flow of the site content.
-              From a visual perspective the site lost some of its more interesting aspects. But it retained much of the way the content was laid out and that’s what mattered most.
+              B-Reel taught me what the design and development lifecycle was like at an agency, how to finish projects and work alongside a professional design team instead. This process showed me how to effectively communicate as a designer and developer.
+              <br><br> I was also able to learn the JavaScript framework React on my own. Through experimentation and iteration, I learned a lot about the framework, as well as my own methods for learning software.
             </p>
           </div>
           <div class="casestudy__row--image">
-            <img src="https://taw.imgix.net/taw2016Site/mobileScreens.png?w=1&h=1" class="casestudy__image">
-          </div>
-          <div class="casestudy__row--image">
-            <img src="https://taw.imgix.net/taw2016Site/Ipad_screen.png?w=1&h=1" class="casestudy__image">
-          </div>
-          <div class="casestudy__row--text column col-12">
-            <h2 class="roboto--bold fluid-type14-20">Performance</h2>
-            <p class="roboto--regular fluid-type14-20">
-              We encountered another challenge very close to the start of the conference. We were given headshots to create a volunteer/team section on the ‘about’ page. We had to display dozens of people with their name and major without losing much performance and
-              load time.
-            </p>
-          </div>
-          <div class="casestudy__row--image">
-            <img src="https://taw.imgix.net/taw2016Site/team.png?w=1&h=1" class="casestudy__image">
+            <img src="img/breel-logo.jpeg" class="casestudy__image">
           </div>
           <div class="casestudy__row--text column col-12">
             <p class="roboto--regular fluid-type14-20">
-              To solve this issue, some JavaScript was written, relying on Imgix, an image compression API, to inject each headshot and appropriate text into the HTML. This compressed the images to a much smaller size without causing performance issues and compromising
-              the resolution.
+              B-reel was a perfect learning environment for me. I was able to turn to professionals who could help me resolve difficult work. Instead of having to browse a Stack Overflow on my own, I was able to become more efficient and knowledgeable.
+              <br><br> When the internship ended, I felt like I was leaving a family. However, I'm not sure I’ll miss implementing a custom-styled, accessible loading indicator that looks consistent across browsers - for a while.
             </p>
-          </div>
-          <div class="casestudy__row--image">
-            <img src="https://taw.imgix.net/taw2016Site/history.png?w=1&h=1" class="casestudy__image">
-          </div>
-          <div class="casestudy__row--image">
-            <img src="https://taw.imgix.net/taw2016Site/food.png?w=1&h=1" class="casestudy__image">
           </div>
           <div class="casestudy__emptyBlock casestudy__row">
           </div>
