Hotfixed image and some words

--- a/b-reel.html
+++ b/b-reel.html
@@ -128,7 +128,7 @@
         <img src="img/breelProjectCoverCropped.jpeg" class="case__cover__image">
         <div class="case__cover__content">
           <h1 class="project__cover__content__title fluid-type24-100 myriad-pro-condensed"> B-Reel NY</h1>
-          <h4 class="fluid-type14-20 roboto--medium">- Creative Technologist, Summer Internship</h4>
+          <h4 class="fluid-type14-20 roboto--medium">- Creative Tech <br> Summer Internship</h4>
         </div>
       </div>
       <div class="case__info">
