--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   <div class="homepage__text">
     <p class="fluid-type30-60 myriad-pro-condensed homepage__name projects__name index--rise1"><a href="index.html">JACOB FRANK</a></p>
     <p class="fluid-type14-20 roboto--regular projects__subhead index--rise1"><a href="index.html">Developer &amp; Designer</a></p>
-    <p class="fluid-type14-20 roboto--regular projects__subhead index--rise1 inProgress"><a href="index.html">Formerly at B-Reel NY</a></p>
+    <p class="fluid-type14-20 roboto--regular projects__subhead index--rise1 inProgress"><a href="index.html">New site coming soon</a></p>
   </div>
   <div class="bottom__link link index--rise1">
     <p class="fluid-type14-20 roboto--regular center__link__name"> <a class="nolink__decoration bottom__link__name__color" id="bottom__Link--Change" href="#page2">Work</a></p>
@@ -120,7 +120,7 @@
         <a href="b-reel.html"> <img src="img/breelProjectCoverCropped.jpeg" class="project__cover__image"></a>
         <div class="project__cover__content">
           <h1 class="project__cover__content__title fluid-type24-100 myriad-pro-condensed"> <a class="nonolink__decoration" href="taw.html">B-Reel NY</a></h1>
-          <h4 class="fluid-type14-20 roboto--medium"><a class="nonolink__decoration" href="b-reel.html">- Creative Technologist, Summer Internship</a></h4>
+          <h4 class="fluid-type14-20 roboto--medium"><a class="nonolink__decoration" href="b-reel.html">- Creative Tech <br> Summer Internship</a></h4>
         </div>
       </div>
     </div>
