added updated taw part

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <a href="taw.html"> <img src="img/tawProjectCoverCropped.jpeg" class="project__cover__image"></a>
         <div class="project__cover__content">
           <h1 class="project__cover__content__title fluid-type24-100 myriad-pro-condensed"> <a class="nonolink__decoration" href="taw.html"> Thought at Work</a></h1>
-          <h4 class="fluid-type14-20 roboto--medium"><a class="nonolink__decoration" href="taw.html">- Front-End, Project Management</a></h4>
+          <h4 class="fluid-type14-20 roboto--medium"><a class="nonolink__decoration" href="taw.html">- Front-End, Project Management, Design</a></h4>
         </div>
       </div>
     </div>
