--- a/taw.html
+++ b/taw.html
@@ -120,7 +120,7 @@
         <img src="img/tawProjectCoverCropped.jpeg" class="case__cover__image">
         <div class="case__cover__content">
           <h1 class="project__cover__content__title fluid-type24-100 myriad-pro-condensed"> Thought at Work</h1>
-          <h4 class="fluid-type14-20 roboto--medium">- Front-End, Project Management</h4>
+          <h4 class="fluid-type14-20 roboto--medium">- Front-End, Project Management, Design</h4>
         </div>
       </div>
       <div class="case__info">
@@ -131,11 +131,11 @@
             </div>
             <div class="column col-10 case__description__hr--pushDown">
               <p class="first roboto--regular fluid-type14-20">
-                Completed the development of a design conference website. Initially a member of the development team and transitioning to leading the development and executing on the website.
+                Creation of a design conference website. Tasked with forming a team and building a design conference website from ground up. The Thought at Work Design Conference 2017 website is a project almost complete with dozens of late nights spent on it.
               </p>
             </div>
             <div class="column col-2 case__info__hr--pushDown">
-              <p class="roboto--regular fluid-type14-20">October 2016 </p>
+              <p class="roboto--regular fluid-type14-20">October 2016 &amp; Fall 2017</p>
               <p class="roboto--regular fluid-type14-20"><a href="http://thoughtatwork.cias.rit.edu/" target="_blank">Visit Website</a></p>
             </div>
             <hr class="case__hr">
@@ -144,6 +144,30 @@
       </div>
       <div class="case__info">
         <div class="casestudy__container">
+          <div class="casestudy__row--text column col-12">
+            <h2 class="roboto--bold fluid-type14-20">The Tasks Undertaken</h2>
+            <p class="roboto--regular fluid-type14-20">
+              Project manager, lead developer and member of the design team for the Thought at Work 2017 Design Conference website. Building on what I learned as the lead developer on Thought at Work 2016, I formed a team with the best designers and developers at RIT. Our team was made up of 12 students; 7 designers, 5 developers. My responsibilities consist of, but are not limited to: Managing the team; Leading design/development meetings; Working on design deliverables; And writing code for development.
+              <br><br>
+              The site is currently under development. Some comps and the GitHub repository can be viewed below.
+              <br><br>
+              <a href="https://github.com/ThoughtAtWork/thoughtatwork.github.io" target="_blank">GitHub Repo</a>
+              <br><br>
+              <strong>Some Comps for the 2017 site are below</strong>
+            </p>
+          </div>
+          <div class="casestudy__row--image">
+            <img src="img/register-comp.jpg" class="casestudy__image">
+          </div>
+          <div class="casestudy__row--image">
+            <img src="img/speakers-comp.jpg" class="casestudy__image">
+          </div>
+          <div class="casestudy__row--text column col-12">
+            <h2 class="roboto--bold fluid-type14-20">Thought at Work 2016</h2>
+            <p class="roboto--regular fluid-type14-20">
+              Completed the development of a design conference website. Initially a member of the development team and transitioning to leading the development and executing on the website.
+            </p>
+          </div>
           <div class="casestudy__row--image">
             <img src="https://taw.imgix.net/taw2016Site/HomeImage.png?w=1&h=1" class="casestudy__image">
           </div>
