Fixed image on b-reel case

--- a/b-reel.html
+++ b/b-reel.html
@@ -126,7 +126,7 @@
     <div class="section">
       <div class="case__cover">
         <img src="img/breelProjectCoverCropped.jpeg" class="case__cover__image">
-        <div class="case__cover__content">
+        <div class="case__cover__content" style="margin-left: -41vw;">
           <h1 class="project__cover__content__title fluid-type24-100 myriad-pro-condensed"> B-Reel NY</h1>
           <h4 class="fluid-type14-20 roboto--medium">- Creative Tech <br> Summer Internship</h4>
         </div>
