Updated copy on b-reel a bit

--- a/b-reel.html
+++ b/b-reel.html
@@ -139,7 +139,7 @@
             </div>
             <div class="column col-10 case__description__hr--pushDown">
               <p class="first roboto--regular fluid-type14-20">
-                I spent the past summer in a paid internship with B-Reel in New York City. I primarily worked with the Development Team, helping to develop and design the implementation of components for multiple client project such as AMEX and Quantcast. This was a
+                I spent the past summer in a paid internship with B-Reel in New York City. I primarily worked with the Development Team, helping to develop and design the implementation of components for clients such as AMEX and Quantcast. This was a
                 great opportunity and incredible learning experience.
               </p>
             </div>
