--- a/static/2016Folio/b-reel.html
+++ b/static/2016Folio/b-reel.html
@@ -110,7 +110,7 @@
     </div>
     <div class="nav__wrapper nav--transformRight nav--right">
       <p class="fluid-type14-20 roboto--regular link">
-        <a class="nolink__decoration" href="mailto:hello@jacobdfrank.com?subject=Jacob, let’s talk"> Email</a>
+        <a class="nolink__decoration" href="mailto:frankjacob42@gmail.com?subject=Jacob, let’s talk"> Email</a>
       </p>
     </div>
   </div>
@@ -155,7 +155,7 @@
         <div class="casestudy__container">
           <div class="casestudy__row--text column col-12">
             <p class="roboto--regular fluid-type14-20">
-              <i>My work at B-Reel is covered by an NDA, so I can't share visuals, code, designs or any other details publicly. Drop me an <a href="mailto:hello@jacobdfrank.com?subject=Jacob, let’s talk"> email</a> if you'd like to know more and I'll get back to you asap.</i>
+              <i>My work at B-Reel is covered by an NDA, so I can't share visuals, code, designs or any other details publicly. Drop me an <a href="mailto:frankjacob42@gmail.com?subject=Jacob, let’s talk"> email</a> if you'd like to know more and I'll get back to you asap.</i>
             </p>
           </div>
           <div class="casestudy__row--image">
