--- a/static/2016Folio/webgl.html
+++ b/static/2016Folio/webgl.html
@@ -106,7 +106,7 @@
             <p class="fluid-type14-20 roboto--regular link"> <a class="nolink__decoration" href="about.html"> About</a> </p>
         </div>
         <div class="nav__wrapper nav--transformRight nav--right">
-            <p class="fluid-type14-20 roboto--regular link"> <a class="nolink__decoration" href="mailto:hello@jacobdfrank.com?subject=Jacob, let’s talk"> Email</a> </p>
+            <p class="fluid-type14-20 roboto--regular link"> <a class="nolink__decoration" href="mailto:frankjacob42@gmail.com?subject=Jacob, let’s talk"> Email</a> </p>
         </div>
     </div>
     <div class="bottom__link link index--rise1">
