--- a/static/2016Folio/about.html
+++ b/static/2016Folio/about.html
@@ -104,7 +104,7 @@
             <p class="fluid-type14-20 roboto--regular link"> <a class="nolink__decoration" href="index.html"> Home</a> </p>
         </div>
         <div class="nav__wrapper nav--transformRight nav--right">
-            <p class="fluid-type14-20 roboto--regular link"> <a class="nolink__decoration" href="mailto:hello@jacobdfrank.com?subject=Jacob, let’s talk"> Email</a> </p>
+            <p class="fluid-type14-20 roboto--regular link"> <a class="nolink__decoration" href="mailto:frankjacob42@gmail.com?subject=Jacob, let’s talk"> Email</a> </p>
         </div>
     </div>
     <div id="fullpage" onscroll="getScrollPosition()">
@@ -125,7 +125,7 @@ I’m Jacob Frank, a Creative Developer, Designer, student at RIT and former Int
                             <img ix-src="https://taw.imgix.net/taw2016Site/meWithLegos.JPG?fit=crop&amp;crop=faces" class="casestudy__image__about" sizes="(min-width: 768px) 400px, 20vw" alt="8 Year old me with legos">
                             <br><br> Having the ability to develop and design solutions is empowering. It’s the real world impact that matters, not the digital one. And right now I’m learning the skills I need to make that happen.
                             <br><br> And hey, I’m looking for an internship this summer.
-                            <br><br> hello@jacobdfrank.com
+                            <br><br> frankjacob42@gmail.com
                         </p>
                     </div>
                     <p class="roboto--regular fluid-type14-20">
